# multimodal-fashion-recommender-system

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  bentofile.yaml  docker-compose.yaml  dockerfile  init.sh  pyproject.toml  requirements-dev.txt  requirements.txt
common/: als_io.py  item_clip_text_embeds.py  text_normalization.py
config/: als_model.yaml
fashion_core/: als_reranker.py  bm25_text_engine.py  db_image_engine.py  db_image_search_engine.py  fashion_embedder.py  fashion_search_engine.py  multimodal_search_engine.py  multimodal_search_service.py  personalized_search_engine.py  search_engine_rrf.py  search_models.py  search_multimodal_personally_demo.py  search_multimodal_service_demo.py  search_results.py  search_utils.py
multimodal-fashion-recommender-system.git/: config  packed-refs
preprocess_data/: download_images.py  download_images_from_db.py  filter_review_data.py  preprocess_for_als.py  split_als_dataset.py
recommand/: a.py  als_evaluator.py  als_reranker.py  als_trainer.py  eda.ipynb  eval_als.py  train_als.py  train_two_tower.py  two_tower_eval.py  two_tower_evaluator.py  two_tower_model.py  two_tower_trainer.py
recommend/: als_evaluator.py  als_trainer.py  eval_als.py  train_als.py
scripts/: build_all_shards.sh  build_bm25_from_item_docs.py  build_cf_interactions.py  build_image_index_from_db.py  build_index.py  download_images.py  fashion_to_db.py  fetch_assets.sh  init_fashion_db.py  search_text_bm25_from_item_docs.py  text_normalization.py
search/: search_fusion.py
service/: service.py
tests/: conftest.py
(+36 files in other folders)
